--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASS
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag jdmejiav/lumen-laravel:latest
+      run: docker build . --file Dockerfile --tag jdmejiav/lumenrandomquotes:latest
       
     - name: Docker Push
-      run: docker push jdmejiav/lumen-laravel
+      run: docker push jdmejiav/lumenrandomquotes
